Fix media sidebar close button overlap

--- a/src/static/stylesheets/media_properties/media-sidebar.module.scss
+++ b/src/static/stylesheets/media_properties/media-sidebar.module.scss
@@ -82,7 +82,7 @@
   flex-direction: column;
   gap: 3px;
   height: max-content;
-  padding-bottom: 20px;
+  padding: 0 35px 20px 0;
   position: relative;
 
   &__title {
